--- a/assets/homepage/index.html
+++ b/assets/homepage/index.html
@@ -1,10 +1,17 @@
 <html>
-<head><title>Cluster Manager API</title></head>
-<body><h1>Cluster Manager API</h1><p>Welcome to the Cluster Manager API<br/>Some relevant links:<br/>
-<ul>
-    <li><a href="swagger-ui/">Swagger UI</a></li>
-    <li><a href="swagger/api.swagger.json">API Swagger File</a></li>
-    <li><a href="protobuf/api.proto">API Protobuf File</a></li>
-</ul>
+
+<head>
+  <title>Cluster Manager API</title>
+</head>
+
+<body>
+  <h1>Cluster Manager API</h1>
+  <p>Welcome to the Cluster Manager API<br/>Some relevant links:<br/>
+    <ul>
+      <li><a href="swagger-ui/">Swagger UI</a></li>
+      <li><a href="swagger/api.swagger.json">API Swagger File</a></li>
+      <li><a href="protobuf/api.proto">API Protobuf File</a></li>
+    </ul>
 </body>
+
 </html>
